# pre-commit-hooks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  hadolint-linux-x86_64.sha256  package.json  pyproject.toml
.circleci/: config.yml
hooks/: end_of_file_fixer.py  hello_world.py  poetry-pytest.sh
ls_pre_commit_hooks/: circleci-config-pack.sh  circleci-config-validate.sh  google-java-code-format.sh  hadolint-check.sh  maven-checkstyle.sh  openapi-linter.sh  plantuml-renderer.sh  poetry-pytest.sh  poetry-run.sh  shfmt.sh  spotless-apply.sh  tidy-xml-format.sh  validate-policy-bot-yaml.sh
pre_commit_hooks/: circleci-config-pack.sh  circleci-config-validate.sh  detect-secrets.sh  end_of_file_fixer.py  google-java-code-format.sh  hello_world.py  maven-checkstyle.sh  poetry-pytest.sh  tidy-xml-format.sh  xml-format.sh
