[tool.poetry]
name = "ls-pre-commit-hooks"
version = "0.7.8"
description = ""
authors = ["Your Name <you@example.com>"]
include = [
  "pre_commit_hooks/*",
  "submodule_pre_commit_hooks/pre_commit_hooks/*"
]

[tool.poetry.dependencies]
python = "^3.7"
yamllint = "^v1.25.0"
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", tag = "0.13.1+ibm.47.dss" }
pytest = "^6.2.5"
black = "^22.1.0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
pylint = "^2.11.1"
pre-commit-hooks = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
